force-app/main/default/objects/V_CC_Transaction_History__c/V_CC_Transaction_History__c.object-meta.xml
<CustomObject>
    <label>V: CC Transaction History</label>
    <nameField>
        <displayFormat>CCTN-{0000000000}</displayFormat>
        <label>CC Trans #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>V: CC Transaction History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>