force-app/main/default/objects/V_CC_Transaction_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Voice - WCSA</description>
    <inlineHelpText>Voice - WCSA</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Transaction History</relationshipLabel>
    <relationshipName>V_CC_Transaction_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>