force-app/main/default/objects/V_CC_Transaction_History__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Voice - WCSA</description>
    <inlineHelpText>Voice - WCSA</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overage Billing</fullName>
            </value>
            <value>
                <fullName>epay Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>