force-app/main/default/objects/V_CC_Transaction_History__c/fields/AVS_Response_Desc__c.field-meta.xml
<CustomField>
    <fullName>AVS_Response_Desc__c</fullName>
    <description>Voice - WCSA</description>
    <inlineHelpText>Voice - WCSA</inlineHelpText>
    <label>AVS Response Desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>