force-app/main/default/objects/V_CC_Transaction_History__c/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <description>Voice - CC Trans</description>
    <inlineHelpText>Voice - CC Trans</inlineHelpText>
    <label>CC Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>