force-app/main/default/objects/V_CC_Transaction_History__c/fields/CC_TH_Match__c.field-meta.xml
<CustomField>
    <fullName>CC_TH_Match__c</fullName>
    <description>Matching Field for CC Trans History</description>
    <externalId>true</externalId>
    <inlineHelpText>Matching Field for CC Trans History</inlineHelpText>
    <label>CC_TH_Match</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>