force-app/main/default/objects/V_CC_Transaction_History__c/fields/Charges_USD__c.field-meta.xml
<CustomField>
    <fullName>Charges_USD__c</fullName>
    <description>Voice - CC Trans</description>
    <inlineHelpText>Voice - CC Trans</inlineHelpText>
    <label>Charges (USD)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>