force-app/main/default/objects/V_CC_Transaction_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Voice - CC Trans</description>
    <inlineHelpText>Voice - CC Trans</inlineHelpText>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>