force-app/main/default/objects/V_CC_Transaction_History__c/fields/Payments_USD__c.field-meta.xml
<CustomField>
    <fullName>Payments_USD__c</fullName>
    <description>Voice - CC Trans</description>
    <inlineHelpText>Voice - CC Trans</inlineHelpText>
    <label>Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>