force-app/main/default/objects/V_CC_Transaction_History__c/fields/Response_Desc__c.field-meta.xml
<CustomField>
    <fullName>Response_Desc__c</fullName>
    <description>Voice - WCSA</description>
    <inlineHelpText>Voice - WCSA</inlineHelpText>
    <label>Response Desc</label>
    <length>20</length>
    <type>Text</type>
</CustomField>