force-app/main/default/objects/V_CC_Transaction_History__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Voice - WCSA</description>
    <inlineHelpText>Voice - WCSA</inlineHelpText>
    <label>Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>