force-app/main/default/objects/V_CC_Transaction_History__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Voice - CC Trans</description>
    <inlineHelpText>Voice - CC Trans</inlineHelpText>
    <label>Transaction ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>